# rebel-forge

./: .gitignore  LICENSE  README.md  dev.sh  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260317_0001_initial_schema.py  20260319_0002_add_corrections.py  20260321_0003_add_conversations.py  20260322_0004_media_prompt_nullable.py  20260328_0005_training_improvements.py
backend/instructions/: backend_scope.md  description.md  product_description.md  technical_description.md
backend/prompts/: analyst.md  comfyui_workflow.json  general.md  onboarding.md  scout.md  setup_platform.md  training.md
backend/src/rebel_forge_backend/: main.py  worker.py
backend/src/rebel_forge_backend/api/: auth.py  router.py
backend/src/rebel_forge_backend/api/routes/: activity.py  auth_routes.py  chat.py  config.py  connections.py  drafts.py  fetch_posts.py  health.py  heartbeat.py  inbox.py  jobs.py  media.py  notifications.py  reset.py  (+10 more)
backend/src/rebel_forge_backend/core/: config.py  logging.py
backend/src/rebel_forge_backend/db/: models.py  session.py
backend/src/rebel_forge_backend/providers/: embeddings.py  registry.py
backend/src/rebel_forge_backend/schemas/: brand.py  drafts.py  jobs.py  media.py
backend/src/rebel_forge_backend/services/: cloud_storage.py  codex_agent.py  codex_middleware.py  context_builder.py  corrections.py  events.py  heartbeat.py  jobs.py  llm_config.py  orchestration.py  storage.py  workspace.py
(+58 files in other folders)
