[project]
name = "rebel-forge-backend"
version = "0.1.0"
description = "Local-first backend for single-tenant social content orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.7.0",
  "psycopg[binary]>=3.2.0",
  "python-slugify>=8.0.4",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
  "requests>=2.32.0",
  "requests-oauthlib>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rebel_forge_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

